<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorGreen">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp">

                <TextView
                    android:id="@+id/remoteName"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:textSize="25dp"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="center"
                    android:text="@string/remote_name"
                    />

        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:columnCount="3">

            <TextView
                android:id="@+id/tvPower"
                android:layout_columnSpan="2"
                android:text="@string/tvPower"
                android:paddingLeft="25dp"
                android:textSize="20dp"
                android:gravity="left"/>
            <TextView
                android:id="@+id/powerVal"
                android:textSize="20dp"
                android:layout_marginLeft="50dp"
                android:gravity="left"
                android:text="@string/powerVal"/>
            <TextView
                android:id="@+id/speakerVolume"
                android:layout_columnSpan="2"
                android:textSize="20dp"
                android:paddingLeft="25dp"
                android:gravity="right"
                android:text="@string/speakerVolume"/>
            <TextView
                android:id="@+id/volumeVal"
                android:textSize="20dp"
                android:layout_marginLeft="50dp"
                android:gravity="right"
                android:text="@string/volumeVal"/>
            <TextView
                android:id="@+id/currentChannel"
                android:layout_columnSpan="2"
                android:textSize="20dp"
                android:paddingLeft="25dp"
                android:gravity="left"
                android:text="@string/currentChannel"/>
            <TextView
                android:id="@+id/channelVal"
                android:textSize="20dp"
                android:layout_marginLeft="50dp"
                android:gravity="right"
                android:text="@string/channelVal"/>

        </GridLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/myRemoteControl"
                    android:textSize="25dp"
                    android:gravity="center"
                    />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Power"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:layout_marginRight="17dp"
                    android:gravity="center"
                    />

                <Switch
                    android:id="@+id/swtchPower"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:gravity="center"
                    android:paddingRight="100dp" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Volume"
                    android:textSize="20dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    />
                <SeekBar
                    android:id="@+id/seekbarVolume"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"

                    android:progress="50"
                    android:layout_gravity="left"
                    android:max="100"
                    />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="84dp"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel"
                android:layout_marginTop="5dp"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="185dp"
                android:textSize="18dp"
                android:text="@string/favoriteChannel"
                android:gravity="left"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                    android:layout_gravity="center"
                android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnnum0"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/num0"
                        android:tag="btn0"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnnum1"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:tag="btn1"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnnum2"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:tag="btn2"
                        android:text="@string/num2"
                        android:gravity="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnnum3"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/num3"
                        android:tag="btn3"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnnum4"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/num4"
                        android:tag="btn4"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnnum5"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/num5"
                        android:tag="btn5"
                        android:gravity="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnnum6"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/num6"
                        android:tag="btn6"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnnum7"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/num7"
                        android:tag="btn7"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnnum8"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/num8"
                        android:tag="btn8"
                        android:gravity="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnnum9"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/num9"
                        android:tag="btn9"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnincChannel"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/incChannel"
                        android:tag="btn++"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btndecChannel"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/decChannel"
                        android:tag="btn--"
                        android:gravity="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnfav1"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fav1"
                        android:tag="btnfav1"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnfav2"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fav2"
                        android:tag="btnfav2"
                        android:gravity="center"
                        />
                    <Button
                        android:id="@+id/btnfav3"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fav3"
                        android:tag="btnfav3"
                        android:gravity="center"
                        />
                </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
